test/conformance/chainsaw/generating-policies/template/generate-multiple-resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multi-template-ns
