test/conformance/chainsaw/generating-policies/template/generate-multiple-resources/configmap-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: multi-template-ns-config
  namespace: multi-template-ns
data:
  key: value
