test/conformance/chainsaw/generating-policies/template/generate-multiple-resources/secret-assert.yaml
apiVersion: v1
kind: Secret
metadata:
  name: multi-template-ns-secret
  namespace: multi-template-ns
type: Opaque
