test/conformance/chainsaw/generating-policies/template/generate-multiple-resources/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: generate-multiple-resources-template
spec:
  concurrent: false
  steps:
  - name: create permissions
    try:
    - apply:
        file: permissions.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-generating-policy-ready
    use:
      template: ../../../_step-templates/generating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: generate-multiple-resources-template
  - name: create namespace
    try:
    - apply:
        file: namespace.yaml
  - name: check that both resources are generated from a single template entry
    try:
    - assert:
        file: configmap-assert.yaml
    - assert:
        file: secret-assert.yaml
